checkpoint compute ilocal for fig

--- a/notebooks/fig2.ipynb
+++ b/notebooks/fig2.ipynb
@@ -12,7 +12,10 @@
     "\n",
     "**Description**: 4 examples of four RGCs tuning curves from retina data\n",
     "\n",
-    "Execution time: 30 min"
+    "Execution time: 30 min\n",
+    "\n",
+    "TODO:\n",
+    "- check the reshape function and similar (flatten()) -> might need to be transposed"
    ]
   },
   {
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0cf57536",
    "metadata": {},
    "outputs": [],
@@ -368,7 +371,7 @@
     "    # average neural response to x\n",
     "    x_rates = tuning_curve(x,tc_pms)\n",
     "\n",
-    "    # index for wrapped gaussian\n",
+    "    # index for wrapped gaussian \n",
     "    k = np.arange(-20,21).reshape(1,1,-1)\n",
     "\n",
     "    for i in tqdm(range(nsamp), \"Ilocal\"):\n",
