--- a/notebooks/fig3_w_ilocal.ipynb
+++ b/notebooks/fig3_w_ilocal.ipynb
@@ -27,14 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import packages\n",
     "import os\n",
     "import numpy as np\n",
-    "from numpy import exp\n",
+    "from numpy import exp, ceil, sqrt, log, pi, zeros, eye\n",
+    "from scipy.special import gammaln\n",
     "import math\n",
     "import scipy.io as sio\n",
     "import matplotlib.pyplot as  plt\n",
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,6 +609,37 @@
     "    \"\"\"\n",
     "    return data.T.flatten()[:,None]    \n",
     "\n",
+    "\n",
+    "def logsumexp(a: np.array, axis=0):\n",
+    "    \"\"\"\n",
+    "    Computes log(sum(exp(a), axis)) while avoiding numerical underflow.\n",
+    "    Equivalent to MATLAB's logsumexp by Tom Minka.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    a : np.ndarray\n",
+    "        Input array.\n",
+    "    axis : int, optional\n",
+    "        Axis along which to sum. Default is 0.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    s : np.ndarray\n",
+    "        Log-sum-exp of the input along the specified axis.\n",
+    "    \"\"\"\n",
+    "    # find the maximum along the specified axis (for numerical stability)\n",
+    "    a_max = np.max(a, axis=axis, keepdims=True)\n",
+    "\n",
+    "    # subtract and exponentiate\n",
+    "    a_stable = a - a_max\n",
+    "    s = a_max + log(np.sum(np.exp(a_stable), axis=axis, keepdims=True))\n",
+    "\n",
+    "    # remove the extra dimension\n",
+    "    s = np.squeeze(s, axis=axis)\n",
+    "    a_max = np.squeeze(a_max, axis=axis)\n",
+    "\n",
+    "    # handle non-finite max values (like -inf)\n",
+    "    return np.where(np.isfinite(a_max), s, a_max)\n",
     "\n",
     "# neural encoder  -----------------------------\n",
     "\n",
@@ -652,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,16 +699,10 @@
     "\n",
     "# transform into 2D stimulus (capitalized to show 2D)\n",
     "xtemp1, xtemp2 = np.meshgrid(x, x)\n",
-    "X = np.column_stack((vec(xtemp1), vec(xtemp2))) # of shape (nx**2, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Stimulus distribution - zero mean Gaussian with covariance matrix\n",
+    "X = np.column_stack((vec(xtemp1), vec(xtemp2))) # of shape (nx**2, 2)    # OK!\n",
+    "\n",
+    "\n",
+    "# Stimulus distribution - zero mean Gaussian with covariance matrix ----------------------------------\n",
     "Sigmax = np.array([[1, 0.25], \n",
     "                    [0.25, 1]])\n",
     "\n",
@@ -694,28 +720,119 @@
     "mahal_dist = np.sum(X.T * (Sigmax_inv @ X.T), axis=0)\n",
     "\n",
     "# Final log probability\n",
-    "logpx = -0.5 * mahal_dist - log_det_term # OK\n",
+    "logpx = -0.5 * mahal_dist - log_det_term                        # OK\n",
     "\n",
     "\n",
-    "# unit-test\n",
-    "assert np.allclose(logpx[:10], np.array([-81.80560781, -80.21121268, -78.66035052, -77.15302134,\n",
-    "       -75.68922512, -74.26896189, -72.89223162, -71.55903433,\n",
-    "       -70.26937001, -69.02323866])), \"wrong logpx\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parameters\n",
+    "#  create tuning curve  ----------------------------------------------\n",
+    "\n",
     "amp = 20                         # maximum firing rate\n",
     "Sigma_f = np.array([[1, 0.2], \n",
     "                     [0.2, 0.5]])\n",
     "Sigma_f2 = np.array([[1, -0.4], \n",
     "                      [-0.4, 0.5]])\n",
-    "mu = np.array([0.3, -1.2])"
+    "mu = np.array([0.3, -1.2])\n",
+    "\n",
+    "firingrate = f(X, mu, Sigma_f, Sigma_f2, amp).reshape(nx, nx).T         # OK !\n",
+    "\n",
+    "\n",
+    "# compute SSI ------------------------------------------------------------\n",
+    "\n",
+    "r = np.arange(0, amp + ceil(sqrt(amp*5))+1)[None] # of shape (n_neuron=1, 31)\n",
+    "\n",
+    "# log p(r|x) of shape (nx**2, r.shape[1])\n",
+    "logpr_x =  log( vec(firingrate) )*r - vec(firingrate) - sum(gammaln(r+1))   # OK!\n",
+    "\n",
+    "# log p(r,x) of shape (nx**2, r.shape[1])\n",
+    "logprx = logpr_x + vec(logpx)\n",
+    "\n",
+    "# log p(r) of shape (n_neurons=1, r.shape[1])\n",
+    "logpr = logsumexp(logprx + log(dx**2), 0)[None]\n",
+    "\n",
+    "# log p(x|r) of shape (nx**2, r.shape[1])\n",
+    "logpx_r = logpr_x + vec(logpx) - logpr\n",
+    "\n",
+    "# H(X|r) of shape (n_neurons=1,31)\n",
+    "HX_r = (-sum( exp(logpx_r) * logpx_r) * dx**2)[None]\n",
+    "\n",
+    "# SSI = H(X) - <H(X|r)>_p(r|x) of shape (nx, nx)\n",
+    "_, logdeterm = np.linalg.slogdet(2*pi*exp(1)*Sigmax)               # OK!\n",
+    "SSI = 0.5 * logdeterm - HX_r @ exp(logpr_x).T                      # OK!\n",
+    "SSI = SSI.reshape(nx, nx).T\n",
+    "\n",
+    "# I(R;X), a scalar\n",
+    "Inf_ssi = vec(SSI).T @ exp(vec(logpx)) * dx**2\n",
+    "\n",
+    "\n",
+    "# compute int J_gamma(y) dgamma, between gamma = 0 and gamma = gamma0 -----------------------------\n",
+    "\n",
+    "# limits for integration - this may need tweaking depending on snr etc.\n",
+    "gamma0 = 0.01\n",
+    "gamma_max = 200\n",
+    "eta = 1e-4\n",
+    "\n",
+    "# tuning curve\n",
+    "f0 = f(X, mu, Sigma_f, Sigma_f2, amp)\n",
+    "\n",
+    "# compute numerical derivative, nabla_x f\n",
+    "f1 = f(X + np.array([eta, 0]), mu, Sigma_f, Sigma_f2, amp) # of shape (1, nx**2) # OK\n",
+    "f2 = f(X + np.array([0, eta]), mu, Sigma_f, Sigma_f2, amp) # of shape (1, nx**2) # OK\n",
+    "df = np.vstack([f1-f0, f2-f0]) / eta # of shape (2, nx**2)\n",
+    "\n",
+    "# Ilocal0 =  int J_gamma(y) dgamma, from gamma_0 to gamma\n",
+    "Ilocal0 = zeros((nx**2, 1))\n",
+    "\n",
+    "# loop over x \n",
+    "for i in range(nx**2):\n",
+    "    J = df[:,i][:,None] * df[:,i][:,None].T / f0[i] # fisher\n",
+    "\n",
+    "    _, logdeterm = np.linalg.slogdet(eye(2)+J * gamma0 * Sigmax / (gamma0*eye(2)+Sigmax))      # OK!\n",
+    "    Ilocal0[i] = 0.5 * logdeterm   #Ilocal0\n",
+    "\n",
+    "Ilocal0 = Ilocal0.reshape(nx,nx).T\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# unit-test ------------------------------------------------------------\n",
+    "\n",
+    "assert np.allclose(logpx[:10], np.array([-81.80560781, -80.21121268, -78.66035052, -77.15302134,\n",
+    "       -75.68922512, -74.26896189, -72.89223162, -71.55903433,\n",
+    "       -70.26937001, -69.02323866])), \"wrong logpx\"\n",
+    "\n",
+    "assert np.allclose(logpr_x[:3,:3], np.array([[-2.        , -1.30685282, -1.30685282],\n",
+    "       [-2.        , -1.30685282, -1.30685282],\n",
+    "       [-2.        , -1.30685282, -1.30685282]])), \"wrong logpr_x\"\n",
+    "\n",
+    "assert np.allclose(logpr, np.array([ -4.004177  ,  -3.0262503 ,  -2.6462648 ,  -2.540976  ,\n",
+    "        -2.55821745,  -2.61336901,  -2.66757795,  -2.71162076,\n",
+    "        -2.74981398,  -2.79006207,  -2.84012527,  -2.90677374,\n",
+    "        -2.99569149,  -3.11148839,  -3.25774536,  -3.43710368,\n",
+    "        -3.65139045,  -3.90175929,  -4.18882754,  -4.51279853,\n",
+    "        -4.87356435,  -5.27078859,  -5.7039714 ,  -6.17249935,\n",
+    "        -6.67568333,  -7.21278685,  -7.78304701,  -8.38568994,\n",
+    "        -9.01994198,  -9.68503768, -10.38022546])), \"Wrong logpr\"\n",
+    "\n",
+    "# SSI\n",
+    "assert np.allclose(SSI.mean(), -0.1210, atol=1e-4), \"wrong SSI\"\n",
+    "assert np.allclose(Inf_ssi, 0.5991, atol=1e-4), \"wrong Inf_ssi\"\n",
+    "\n",
+    "# ilocal\n",
+    "assert np.allclose(Ilocal0.max(), 0.0961, atol=1e-6), 'Wrong Ilocal0'\n",
+    "assert np.allclose(Ilocal0.mean(), 0.0013, atol=1e-4), 'Wrong Ilocal0'\n",
+    "\n",
+    "# fisher info\n",
+    "assert np.allclose(J, np.zeros((2,2)), atol=1e-6), 'Wrong J'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute Ilocal"
    ]
   },
   {
@@ -729,105 +846,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(153.55029708853237)"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(sum((X-mu).T * solve(Sigma_f2, (X-mu).T))).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 10000)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[89], line 21\u001b[0m\n\u001b[1;32m     18\u001b[0m mu \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1.2\u001b[39m])\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Calculate and plot\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m firingrate \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSigma_f\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSigma_f2\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mreshape(nx, nx)\n\u001b[1;32m     23\u001b[0m fig, ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[1;32m     24\u001b[0m im \u001b[38;5;241m=\u001b[39m ax\u001b[38;5;241m.\u001b[39mimshow(firingrate, extent\u001b[38;5;241m=\u001b[39m[x\u001b[38;5;241m.\u001b[39mmin(), x\u001b[38;5;241m.\u001b[39mmax(), x\u001b[38;5;241m.\u001b[39mmin(), x\u001b[38;5;241m.\u001b[39mmax()], \n\u001b[1;32m     25\u001b[0m                origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m, cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mviridis\u001b[39m\u001b[38;5;124m'\u001b[39m, aspect\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mequal\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[89], line 8\u001b[0m, in \u001b[0;36mf\u001b[0;34m(x, Sigma_f, Sigma_f2)\u001b[0m\n\u001b[1;32m      5\u001b[0m Sigma_f2_inv \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39minv(Sigma_f2)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Mahalanobis distances\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m mahal1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mSigma_f_inv\u001b[49m \u001b[38;5;241m*\u001b[39m x\u001b[38;5;241m.\u001b[39mT, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      9\u001b[0m mahal2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum((x \u001b[38;5;241m-\u001b[39m mu[:, \u001b[38;5;28;01mNone\u001b[39;00m])\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m Sigma_f2_inv \u001b[38;5;241m*\u001b[39m (x \u001b[38;5;241m-\u001b[39m mu[:, \u001b[38;5;28;01mNone\u001b[39;00m])\u001b[38;5;241m.\u001b[39mT, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m amp \u001b[38;5;241m*\u001b[39m (np\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.5\u001b[39m \u001b[38;5;241m*\u001b[39m mahal1) \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.5\u001b[39m \u001b[38;5;241m*\u001b[39m mahal2)) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m2\u001b[39m\n",
-      "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 10000)"
-     ]
-    }
-   ],
-   "source": [
-    "# # Tuning curve function (vectorized)\n",
-    "# def f(x, Sigma_f, Sigma_f2):\n",
-    "#     \"\"\"Mixture of two Gaussians tuning curve\"\"\"\n",
-    "#     Sigma_f_inv = np.linalg.inv(Sigma_f)\n",
-    "#     Sigma_f2_inv = np.linalg.inv(Sigma_f2)\n",
-    "    \n",
-    "#     # Mahalanobis distances\n",
-    "#     mahal1 = np.sum(x.T @ Sigma_f_inv * x.T, axis=1)\n",
-    "#     mahal2 = np.sum((x - mu[:, None]).T @ Sigma_f2_inv * (x - mu[:, None]).T, axis=1)\n",
-    "#     return amp * (np.exp(-0.5 * mahal1) + np.exp(-0.5 * mahal2)) / 2 + 2\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Calculate and plot\n",
-    "# firingrate = f(X, Sigma_f, Sigma_f2).reshape(nx, nx)\n",
-    "\n",
-    "# fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
-    "# im = ax.imshow(firingrate, extent=[x.min(), x.max(), x.min(), x.max()], \n",
-    "#                origin='lower', cmap='viridis', aspect='equal')\n",
-    "# plt.colorbar(im, ax=ax, label='mean spike count')\n",
-    "# ax.contour(x, x, np.exp(logpx).reshape(nx, nx), levels=8, colors='white')\n",
-    "# ax.set_title('tuning curve', fontsize=14)\n",
-    "# ax.set_xlim([-4, 4])\n",
-    "# ax.set_ylim([-4, 4])\n",
-    "# ax.axis('off')\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-81.80560781, -80.21121268, -78.66035052, -77.15302134,\n",
-       "       -75.68922512, -74.26896189, -72.89223162, -71.55903433,\n",
-       "       -70.26937001, -69.02323866])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -842,9 +868,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "logpx[1:10]"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
