add docstring to tuning cirve

--- a/notebooks/study/15_fig3_w_ilocal.ipynb
+++ b/notebooks/study/15_fig3_w_ilocal.ipynb
@@ -215,32 +215,16 @@
     "      Sigma_f2=np.array([[1, -0.4], [-0.4, 0.5]]), \n",
     "      amp=20):\n",
     "    \"\"\"Compute 2D tuning curve for a single neuron\n",
-    "    as a mixture of two Gaussians.\n",
-    "\n",
-    "    The tuning curve models neural responses as a function of two stimulus dimensions\n",
-    "    (e.g., natural image principal components). It combines two Gaussian bumps with\n",
-    "    different centers and covariance structures, plus a baseline firing rate.    \n",
     "\n",
     "    Args:\n",
-    "        x (np.array): Stimulus coordinates of shape (N, 2), where N is the number of points\n",
-    "        ...and the two columns represent PC1 and PC2 (or any 2D feature space).\n",
-    "        mu (np.array, optional): Center of the second Gaussian component, shape (2,). \n",
-    "        ...Defaults to np.array([0.3, -1.2]).\n",
-    "        Sigma_f (np.array, optional): Covariance (2x2) for the first Gaussian \n",
-    "        ...component centered at origin. Controls the shape and orientation of \n",
-    "        ...the first tuning bump. \n",
-    "        ...Defaults to np.array([[1, 0.2], [0.2, 0.5]]).\n",
-    "        Sigma_f2 (np.array, optional): Covariance matrix (2x2) for the second \n",
-    "        ...Gaussian component centered at mu. Controls the shape and orientation \n",
-    "        ...of the second tuning bump. \n",
-    "        ...Defaults to np.array([[1, -0.4], [-0.4, 0.5]]). \n",
-    "        amp (int, optional): Maximum amplitude (peak firing rate) \n",
-    "        ...of the tuning curve in spikes/second. \n",
-    "        ...Defaults to 20.\n",
+    "        x (_type_): _description_\n",
+    "        mu (_type_, optional): _description_. Defaults to np.array([0.3, -1.2]).\n",
+    "        Sigma_f (_type_, optional): _description_. Defaults to np.array([[1, 0.2], [0.2, 0.5]]).\n",
+    "        Sigma_f2 (_type_, optional): _description_. Defaults to np.array([[1, -0.4], [-0.4, 0.5]]).\n",
+    "        amp (int, optional): _description_. Defaults to 20.\n",
     "\n",
     "    Returns:\n",
-    "        np.array: Mean firing rates at each stimulus location (tuning curve), shape (N,).\n",
-    "        Values represent spikes/second, with a baseline of 2 spikes/s.\n",
+    "        _type_: _description_\n",
     "    \"\"\"\n",
     "    return amp * (exp(-0.5 * sum(x.T * solve(Sigma_f,x.T))) + exp(-0.5 * sum((x-mu).T * solve(Sigma_f2, (x-mu).T)))) / 2 + 2\n",
     "\n",
@@ -773,7 +757,6 @@
     "\n",
     "#  create tuning curve  ----------------------------------------------\n",
     "\n",
-    "# of shape (nx,nx)\n",
     "firingrate = tuning_curve(X).reshape(nx, nx).T\n",
     "\n",
     "# compute SSI ------------------------------------------------------------\n",
