--- a/notebooks/study/17_fig3_w_ilocal.ipynb
+++ b/notebooks/study/17_fig3_w_ilocal.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,6 @@
     "    return ax\n",
     "\n",
     "\n",
-    "\n",
     "# Information metrics -------------------------------------------------------\n",
     "\n",
     "def compute_ssi(X, firingrate, dx, amp=20, Sigmax=np.array([[1,0.25], [0.25,1]])):\n",
@@ -487,24 +486,6 @@
    "source": [
     "## Unit-tests"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -878,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -901,11 +882,11 @@
     "eta = 1e-4\n",
     "\n",
     "# tuning curve\n",
-    "f0 = f(X)\n",
+    "f0 = tuning_curve(X)\n",
     "\n",
     "# compute numerical derivative, nabla_x f\n",
-    "f1 = f(X + np.array([eta, 0])) # of shape (1, nx**2) # OK\n",
-    "f2 = f(X + np.array([0, eta])) # of shape (1, nx**2) # OK\n",
+    "f1 = tuning_curve(X + np.array([eta, 0])) # of shape (1, nx**2) # OK\n",
+    "f2 = tuning_curve(X + np.array([0, eta])) # of shape (1, nx**2) # OK\n",
     "df = np.vstack([f1-f0, f2-f0]) / eta # of shape (2, nx**2)\n",
     "\n",
     "# Ilocal0 =  int J_gamma(y) dgamma, from gamma_0 to gamma\n",
@@ -943,7 +924,7 @@
     "    Y = np.hstack([vec(ycord1), vec(ycord2)]) # ok\n",
     "    \n",
     "    # firing rate in this new space\n",
-    "    firingrate = f(Y).reshape(ny, ny).T # Ok!\n",
+    "    firingrate = tuning_curve(Y).reshape(ny, ny).T # Ok!\n",
     "\n",
     "    # log p(x) in this new coordinate space\n",
     "    logpx = -0.5 * sum(Y.T * solve(Sigmax, Y.T)).reshape(ny,ny).T - 0.5 * slogdet(2*pi*Sigmax)[1] # OK!\n",
