--- a/notebooks/study/19_fig3_w_ilocal.ipynb
+++ b/notebooks/study/19_fig3_w_ilocal.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,25 +527,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Unit-tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unit-test\n",
+    "nx = 100\n",
+    "xmax = 10\n",
+    "x = np.linspace(-xmax, xmax, nx)[None] # of shape (1,100)\n",
+    "test_f(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 826 ms, sys: 84.3 ms, total: 911 ms\n",
-      "Wall time: 910 ms\n"
+      "CPU times: user 3.02 s, sys: 85.2 ms, total: 3.11 s\n",
+      "Wall time: 905 ms\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "%%time \n",
     "\n",
     "# load one cell data\n",
     "mat = sio.loadmat(CELL_DATA_PATH)\n",
@@ -572,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -593,8 +613,8 @@
       "mse shape:  (301, 301)\n",
       "grid shape:  (301, 301)\n",
       "Loaded precomputed data: KeysView(NpzFile 'data/computed_contrast_cells/BDEvSSI_no2.npz' with keys: mse, posterior, ssi, grid_x, grid_y)\n",
-      "CPU times: user 4.9 s, sys: 175 ms, total: 5.08 s\n",
-      "Wall time: 247 ms\n"
+      "CPU times: user 5.48 s, sys: 79.4 ms, total: 5.56 s\n",
+      "Wall time: 269 ms\n"
      ]
     }
    ],
@@ -678,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,16 +746,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 6s, sys: 52.9 s, total: 3min 59s\n",
+      "Wall time: 1min 22s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time \n",
     "\n",
     "# int J_gamma(y) dgamma, b/w gamma = 0 and gamma = gamma0 -----------------------------\n",
     "\n",
     "# limits for integration - this may need tweaking depending on snr etc.\n",
-    "ngamma = 50; #100; \n",
+    "ngamma = 5; #100; \n",
     "gamma0 = 0.01\n",
     "gamma_max = 200\n",
     "eta = 1e-4\n",
@@ -845,15 +874,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plot"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -861,8 +883,8 @@
      "output_type": "stream",
      "text": [
       "5.8709399157428415\n",
-      "CPU times: user 2.85 s, sys: 13.9 ms, total: 2.86 s\n",
-      "Wall time: 678 ms\n"
+      "CPU times: user 664 ms, sys: 19.3 ms, total: 683 ms\n",
+      "Wall time: 681 ms\n"
      ]
     },
     {
@@ -1016,6 +1038,10 @@
     "ax_bottom3.set_aspect('equal')\n",
     "ax_bottom3.spines[['top','right']].set_visible(False)\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# format figure\n",
     "fig.subplots_adjust(wspace=0.9, hspace=0.5)\n",
     "\n",
@@ -1028,20 +1054,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Control I_local"
+    "## Controls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 38.3 ms, sys: 1.1 ms, total: 39.4 ms\n",
-      "Wall time: 38.8 ms\n"
+      "CPU times: user 44.2 ms, sys: 0 ns, total: 44.2 ms\n",
+      "Wall time: 43.8 ms\n"
      ]
     },
     {
@@ -1071,6 +1097,84 @@
     "plt.tick_params(labelsize=12)\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### unit-test ilocal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Wrong J",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# unit-test ilocal for igamma=0 and r=0\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# fisher info\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(J, np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m)), atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-6\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWrong J\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# ilocal\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(Ilocal0\u001b[38;5;241m.\u001b[39mmax(), \u001b[38;5;241m0.0961\u001b[39m, atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-6\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWrong Ilocal0\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Wrong J"
+     ]
+    }
+   ],
+   "source": [
+    "# unit-test ilocal for igamma=0 and r=0\n",
+    "\n",
+    "# fisher info\n",
+    "assert np.allclose(J, np.zeros((2,2)), atol=1e-6), 'Wrong J'\n",
+    "\n",
+    "# ilocal\n",
+    "assert np.allclose(Ilocal0.max(), 0.0961, atol=1e-6), 'Wrong Ilocal0'\n",
+    "assert np.allclose(Ilocal0.mean(), 0.0013, atol=1e-4), 'Wrong Ilocal0'\n",
+    "\n",
+    "assert np.allclose(dgamma[:10], np.array([0.01      , 0.0010521 , 0.00116279, 0.00128513, 0.00142033,\n",
+    "       0.00156977, 0.00173492, 0.00191745, 0.00211919, 0.00234215])), \"Wrong dgamma for igamma=0\"\n",
+    "\n",
+    "assert np.allclose(gamma[:10], np.array([0.01      , 0.0110521 , 0.01221489, 0.01350001, 0.01492035,\n",
+    "       0.01649012, 0.01822504, 0.02014249, 0.02226168, 0.02460383])), \"Wrong gamma for igamma=0\"\n",
+    "\n",
+    "# for igamma=0\n",
+    "# assert np.allclose(logpx[:3,:3], np.array([[-90.00560781, -88.26512781, -86.57168781],\n",
+    "#        [-88.26512781, -86.51288781, -84.80768781],\n",
+    "#        [-86.57168781, -84.80768781, -83.09072781]])), \"Wrong logpx for igamma=0\"\n",
+    "# logpy\n",
+    "assert np.allclose(logpy.mean(), -41.355489145119144), \"wrong logpy\"\n",
+    "assert np.allclose(logpy.max(), -1.7690594628954812), \"wrong logpy\"\n",
+    "assert np.allclose(logpy.min(), -146.91202131991633), \"wrong logpy\"\n",
+    "assert np.allclose(logpy[0,:2], np.array([-89.37694977, -87.63808617])), \"wrong logpy\"\n",
+    "\n",
+    "# logpr_x\n",
+    "assert np.allclose(logpr_x.mean(), -2.176167841290246, atol=1e-6), \"wrong logpr_x\"\n",
+    "\n",
+    "# logpr_y\n",
+    "assert np.allclose(logpr_y.mean(), -2.172208555883888, atol=1e-6), \"wrong logpr_y\"\n",
+    "\n",
+    "# Jry\n",
+    "assert np.allclose(Jry.mean(), 0.0068690480743114838, atol=1e-6), \"wrong Jry\"\n",
+    "\n",
+    "# py_x\n",
+    "assert np.allclose(py_x.mean(), 0.0022278918551180463, atol=1e-6), \"wrong py_x\"\n",
+    "assert np.allclose(py_x.max(), 15.915429354762148, atol=1e-6), \"wrong py_x\"\n",
+    "\n",
+    "# meanJry\n",
+    "assert np.allclose(meanJry.mean(), 0.07453722243142574), \"wrong py_x\"\n",
+    "\n",
+    "# Ilocal\n",
+    "assert np.allclose(Ilocal.mean(), 0.001337197219821242), \"wrong Ilocal\"\n",
+    "assert np.allclose(logpx.mean(), -38.0794574130235), \"wrong logpx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
