--- a/notebooks/study/16_fig3_w_ilocal_replication.ipynb
+++ b/notebooks/study/16_fig3_w_ilocal_replication.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,15 +425,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 835 ms, sys: 81 ms, total: 915 ms\n",
-      "Wall time: 915 ms\n"
+      "CPU times: user 837 ms, sys: 82.9 ms, total: 920 ms\n",
+      "Wall time: 920 ms\n"
      ]
     }
    ],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -487,8 +487,8 @@
       "mse shape:  (301, 301)\n",
       "grid shape:  (301, 301)\n",
       "Loaded precomputed data: KeysView(NpzFile 'data/computed_contrast_cells/BDEvSSI_no2.npz' with keys: mse, posterior, ssi, grid_x, grid_y)\n",
-      "CPU times: user 6.39 s, sys: 311 ms, total: 6.7 s\n",
-      "Wall time: 703 ms\n"
+      "CPU times: user 5.92 s, sys: 119 ms, total: 6.04 s\n",
+      "Wall time: 278 ms\n"
      ]
     }
    ],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -582,8 +582,8 @@
      "output_type": "stream",
      "text": [
       "5.8709399157428415\n",
-      "CPU times: user 103 ms, sys: 3.03 ms, total: 106 ms\n",
-      "Wall time: 105 ms\n"
+      "CPU times: user 223 ms, sys: 906 µs, total: 224 ms\n",
+      "Wall time: 222 ms\n"
      ]
     },
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,6 +818,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-10.         -9.7979798  -9.5959596 ...   9.5959596   9.7979798\n",
+      "   10.       ]\n",
+      " [-10.         -9.7979798  -9.5959596 ...   9.5959596   9.7979798\n",
+      "   10.       ]\n",
+      " [-10.         -9.7979798  -9.5959596 ...   9.5959596   9.7979798\n",
+      "   10.       ]\n",
+      " ...\n",
+      " [-10.         -9.7979798  -9.5959596 ...   9.5959596   9.7979798\n",
+      "   10.       ]\n",
+      " [-10.         -9.7979798  -9.5959596 ...   9.5959596   9.7979798\n",
+      "   10.       ]\n",
+      " [-10.         -9.7979798  -9.5959596 ...   9.5959596   9.7979798\n",
+      "   10.       ]]\n",
+      "[[-10.]\n",
+      " [-10.]\n",
+      " [-10.]\n",
+      " ...\n",
+      " [ 10.]\n",
+      " [ 10.]\n",
+      " [ 10.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# x points to plot, from -xmax to xmax\n",
+    "amp = 20\n",
+    "nx = 100\n",
+    "xmax = 10\n",
+    "x = np.linspace(-xmax, xmax, nx)[None] # of shape (1,100)\n",
+    "dx = x[0,1] - x[0,0]\n",
+    "\n",
+    "# transform into 2D stimulus (capitalized to show 2D)\n",
+    "xtemp1, xtemp2 = np.meshgrid(x, x)\n",
+    "X = np.column_stack((vec(xtemp1), vec(xtemp2))) # of shape (nx**2, 2)    # OK!\n",
+    "\n",
+    "\n",
+    "print(xtemp1)\n",
+    "\n",
+    "print(vec(xtemp1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -828,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
