--- a/notebooks/study/21_fig3_working.ipynb
+++ b/notebooks/study/21_fig3_working.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,9 +428,9 @@
     "    and given covariance matrix\n",
     "\n",
     "    Args:\n",
-    "        X (_type_): _description_\n",
-    "        firingrate (_type_): _description_\n",
-    "        dx (_type_): _description_\n",
+    "        X (np.array): _description_\n",
+    "        firingrate (np.array): _description_\n",
+    "        dx (float): _description_\n",
     "        amp (int, optional): _description_. Defaults to 20.\n",
     "        Sigmax (_type_, optional): _description_. Defaults to np.array([[1,0.25], [0.25,1]]).\n",
     "\n",
