Update name fig3

--- a/notebooks/fig3.ipynb
+++ b/notebooks/fig3.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -564,8 +564,8 @@
     "fig = plot_fig3_panel(fig, gs_cell4, rate_preds_cell4, ssi_cell4, Ilocal_cell4, pcs_cell4, sigma_cell4, letter='D',**fig_params)\n",
     "\n",
     "# save figure\n",
-    "plt.savefig(f'figures/fig3_ngamma_{ngamma}.svg', bbox_inches = 'tight', transparent=True, dpi=400)\n",
-    "plt.savefig(f'figures/fig3_ngamma_{ngamma}.pdf', bbox_inches = 'tight', transparent=True, dpi=400)"
+    "plt.savefig(f'figures/fig3.svg', bbox_inches = 'tight', transparent=True, dpi=400)\n",
+    "plt.savefig(f'figures/fig3.pdf', bbox_inches = 'tight', transparent=True, dpi=400)"
    ]
   },
   {
