--- a/notebooks/fig2.ipynb
+++ b/notebooks/fig2.ipynb
@@ -644,7 +644,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing Ilocal:  20%|██        | 2019/10000 [07:24<28:44,  4.63it/s]"
+      "Computing Ilocal: 100%|██████████| 10000/10000 [35:59<00:00,  4.63it/s]\n",
+      "Computing Ilocal:  74%|███████▍  | 7423/10000 [25:33<08:15,  5.21it/s]"
      ]
     }
    ],
