Tested SSi for tuningxgain=7

--- a/notebooks/fig3.ipynb
+++ b/notebooks/fig3.ipynb
@@ -28,17 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "CPU times: user 1.16 ms, sys: 22 µs, total: 1.19 ms\n",
-      "Wall time: 1 ms\n"
+      "CPU times: user 3.49 s, sys: 133 ms, total: 3.62 s\n",
+      "Wall time: 1.04 s\n"
      ]
     }
    ],
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +313,8 @@
       "prior mean cell 2: (np.float64(-4.49710592253228e-18), np.float64(2.24855296126614e-18))\n",
       "prior mean cell 3: (np.float64(-2.1361253132028328e-17), np.float64(1.3491317767596838e-17))\n",
       "prior mean cell 4: (np.float64(-4.2708990760651386e-17), np.float64(5.3948198855559645e-17))\n",
-      "CPU times: user 3.29 s, sys: 325 ms, total: 3.61 s\n",
-      "Wall time: 3.61 s\n"
+      "CPU times: user 3.25 s, sys: 319 ms, total: 3.57 s\n",
+      "Wall time: 3.57 s\n"
      ]
     }
    ],
@@ -353,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -404,8 +402,8 @@
       "Epoch 160/200, Train Loss: 0.4817, Val Loss: 0.7975\n",
       "Epoch 180/200, Train Loss: 0.4326, Val Loss: 0.7369\n",
       "Epoch 200/200, Train Loss: 0.3920, Val Loss: 0.6859\n",
-      "CPU times: user 14.6 s, sys: 19.7 ms, total: 14.6 s\n",
-      "Wall time: 619 ms\n"
+      "CPU times: user 12.2 s, sys: 193 ms, total: 12.4 s\n",
+      "Wall time: 914 ms\n"
      ]
     }
    ],
@@ -440,15 +438,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 556 ms, sys: 0 ns, total: 556 ms\n",
-      "Wall time: 31.3 ms\n"
+      "CPU times: user 543 ms, sys: 23.1 ms, total: 566 ms\n",
+      "Wall time: 33.2 ms\n"
      ]
     }
    ],
@@ -483,17 +481,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing ilocal: 100%|██████████| 100/100 [17:12<00:00, 10.32s/it]\n",
-      "Computing ilocal: 100%|██████████| 100/100 [17:48<00:00, 10.69s/it]\n",
-      "Computing ilocal: 100%|██████████| 100/100 [18:00<00:00, 10.81s/it]\n",
-      "Computing ilocal: 100%|██████████| 100/100 [17:31<00:00, 10.52s/it]\n"
+      "Computing ilocal: 100%|██████████| 100/100 [17:21<00:00, 10.41s/it]\n",
+      "Computing ilocal:  76%|███████▌  | 76/100 [12:33<04:06, 10.27s/it]"
      ]
     }
    ],
@@ -513,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -572,12 +568,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Control I_local"
+    "## Control $I_{local}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
